[metadata]
name = autogen-ui
version = 0.0.0
author = codeweaverxyz
description = autogen-ui
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codeweaverxyz/autogen-ui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
